--- a/com.microsoft.gittf.client.clc/pom.xml
+++ b/com.microsoft.gittf.client.clc/pom.xml
@@ -46,7 +46,8 @@ WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
         <version.major>1</version.major>
         <version.minor>0</version.minor>
         <version.service>1</version.service>
-        <version.build>SNAPSHOT</version.build>
+        <version.build>SNAPSHOT</version.build> 
+        <downloadRoot>${basedir}/../target</downloadRoot>
     </properties>
 
     <dependencies>
@@ -66,6 +67,28 @@ WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
     <build>
         <plugins>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
+                <executions>
+                  <execution>
+                    <id>copy-resources</id>
+                    <phase>validate</phase>
+                    <goals>
+                      <goal>copy-resources</goal>
+                    </goals>
+                    <configuration>
+                      <outputDirectory>target/temp</outputDirectory>
+                      <resources>          
+                        <resource>
+                          <directory>chocolatey</directory>
+                          <filtering>true</filtering>
+                        </resource>
+                      </resources>              
+                    </configuration>            
+                  </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>properties-maven-plugin</artifactId>
