Updating the git-tf version

--- a/com.microsoft.gittf.client.clc/src/main/resources/git-tf-version.properties
+++ b/com.microsoft.gittf.client.clc/src/main/resources/git-tf-version.properties
@@ -1,4 +1,5 @@
-version.major=1
+buildNumber=2.0.0.DEVELOP
+version.major=2
 version.minor=0
-version.service=1
+version.service=0
 # version.build is set by the build process.
