New version number 2.0.1
Minor version number has been promoted.
Documents corrected accordingly.

--- a/com.microsoft.gittf.client.clc/src/main/resources/git-tf-version.properties
+++ b/com.microsoft.gittf.client.clc/src/main/resources/git-tf-version.properties
@@ -1,5 +1,5 @@
-buildNumber=2.0.0.DEVELOP
+buildNumber=2.0.1.DEVELOP
 version.major=2
 version.minor=0
-version.service=0
-# version.build is set by the build process.
+version.service=1
+# version.build is set by the build process to the current date.
